--- a/css/styles.css
+++ b/css/styles.css
@@ -118,3 +118,25 @@ audio{
         left: -5px;
     }
 }
+
+@media (max-width: 480px) {
+    .card-body {
+        font-size: 14px;
+    }
+
+    audio {
+        width: 100%;
+    }
+}
+@media (max-width: 1200px) {
+    .card {
+        width: 80%;
+    }
+}
+
+@media (max-width: 992px) {
+    .card {
+        width: 90%;
+    }
+}
+
